# cosc-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
cosc/: __init__.py  attribute.py  build.py  cli.py  schema.py
examples/: load_v01.ipynb
specs/: DATASET_CARD.md  SCHEMA.md
